--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               setShowError(false);
 
               try {
-                const response = await fetch(GOOGLE_SCRIPT_URL, {
+                const response = await fetch(https://script.google.com/macros/s/AKfycbyBY9kc6SNqX1CHTx5N8M_0rWFw3dRuBzil78w3RtzKT3pQNpwb9OtBAK7QiB0nnva9aA/exec, {
                   method: 'POST',
                   mode: 'no-cors',
                   headers: {
