--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-// ... existing code ...
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vendor Selection Form</title>
+    <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body>
+    <div id="root"></div>
+    
     <script type="text/babel">
         const { useState } = React;
 
         // PASTE YOUR GOOGLE APPS SCRIPT WEB APP URL HERE
-        const GOOGLE_SCRIPT_URL = 'YOUR_GOOGLE_APPS_SCRIPT_URL_HERE';
+        const GOOGLE_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbyBY9kc6SNqX1CHTx5N8M_0rWFw3dRuBzil78w3RtzKT3pQNpwb9OtBAK7QiB0nnva9aA/exec';
 
         const VendorSelectionForm = () => {
           const vendors = [
@@ -43,7 +54,7 @@
               setShowError(false);
 
               try {
-                const response = await fetch(https://script.google.com/macros/s/AKfycbyBY9kc6SNqX1CHTx5N8M_0rWFw3dRuBzil78w3RtzKT3pQNpwb9OtBAK7QiB0nnva9aA/exec, {
+                const response = await fetch(GOOGLE_SCRIPT_URL, {
                   method: 'POST',
                   mode: 'no-cors',
                   headers: {
@@ -55,6 +66,7 @@
                   })
                 });
 
+                // Note: no-cors mode doesn't allow reading response, but submission still works
                 setSelectedName('');
                 setSelectedVendors([]);
                 setShowSuccess(true);
