--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         function VendorSelectionForm() {
           const vendors = [
-            'APC', 'Avast', 'Fellowes', 'HP', 'iStorage', 'Lenovo', 
+            'APC - Test', 'Avast', 'Fellowes', 'HP', 'iStorage', 'Lenovo', 
             'Logitech', 'Philips', 'Samsung Mobile', 'Synology', 'TP Link'
           ];
 
@@ -30,7 +30,7 @@
             'Jenny Hodson', 'Jonathan Ashfall', 'Jon Garvey', 'Karen Burton', 'Keane Richards',
             'Klaudia Borun', 'Madison Moss-Williams', 'Mat Pyle', 'Michael Addinell', 'Michael Doherty',
             'Mike Leigh', 'Nourelhuda El Magbari', 'Paul Rennals', 'Paul Sellers', 'Ray Parmar',
-            'Rourke Smal', 'Scott Hancock', 'Sarah Lyons', 'Tom Bestwick', 'Zahid Hussain', 'Test'
+            'Rourke Smal', 'Scott Hancock', 'Sarah Lyons', 'Tom Bestwick', 'Zahid Hussain'
           ];
 
           const [selectedName, setSelectedName] = useState('');
