--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
         function VendorSelectionForm() {
           const vendors = [
-            'APC - Test', 'Avast', 'Fellowes', 'HP', 'iStorage', 'Lenovo', 
-            'Logitech', 'Philips', 'Samsung Mobile', 'Synology', 'TP Link'
+            'APC - 5 Ways APC can help your customers', 'Avast - Don’t Get Caught with Your Patches Down', 'Fellowes - The Benefit of Ergonomic Office Products', 'HP - Workstations Range, New laptops', 'iStorage - SED/ Duplicators', 'Lenovo - Attach (Services & Peripherals)', 'Philips - The Philips Difference MMD - Pro TV in to NHS healthcare, ', 'Samsung Mobile - New Tab Range (A and S Series)', 'Synology - High availability. Flash storage', 'TP Link - VIGI products/solution
+'
           ];
 
           const salesTeam = [
@@ -29,7 +29,7 @@
             'David Walshe', 'Elliott Yates', 'Hasan Haideri', 'Jason Curtis', 'Jat Tumber',
             'Jenny Hodson', 'Jonathan Ashfall', 'Jon Garvey', 'Karen Burton', 'Keane Richards',
             'Klaudia Borun', 'Madison Moss-Williams', 'Mat Pyle', 'Michael Addinell', 'Michael Doherty',
-            'Mike Leigh', 'Nourelhuda El Magbari', 'Paul Rennals', 'Paul Sellers', 'Ray Parmar',
+            'Mike Leigh', 'Nourelhuda El Magbari', 'Paul Rennals', 'Paul Roman', 'Paul Sellers', 'Ray Parmar',
             'Rourke Smal', 'Scott Hancock', 'Sarah Lyons', 'Tom Bestwick', 'Zahid Hussain'
           ];
 
