--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
 
         function VendorSelectionForm() {
           const vendors = [
-            'APC - 5 Ways APC can help your customers', 'Avast - Don’t Get Caught with Your Patches Down', 
-              'Fellowes - The Benefit of Ergonomic Office Products', 'HP - Workstations Range, New laptops', 
+            'APC - 5 Ways APC can help your customers', 'Avast - Don’t Get Caught with Your Patches Down', 'Fellowes - The Benefit of Ergonomic Office Products', 'HP - Workstations Range, New laptops', 
               'iStorage - SED/ Duplicators', 'Lenovo - Attach (Services & Peripherals)', 
-              'Philips - The Philips Difference MMD - Pro TV in to NHS healthcare, ', 'Samsung Mobile - New Tab Range (A and S Series)', 
+              'Philips - The Philips Difference MMD - Pro TV in to NHS healthcare', 'Samsung Mobile - New Tab Range (A and S Series)', 
               'Synology - High availability. Flash storage', 'TP Link - VIGI products/solution
 '
           ];
