--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 
         function VendorSelectionForm() {
           const vendors = [
-            'APC - 5 Ways APC can help your customers', 'Avast - Don’t Get Caught with Your Patches Down', 'Fellowes - The Benefit of Ergonomic Office Products', 'HP - Workstations Range, New laptops', 'iStorage - SED/ Duplicators', 'Lenovo - Attach (Services & Peripherals)', 'Philips - The Philips Difference MMD - Pro TV in to NHS healthcare', 'Samsung Mobile - New Tab Range (A and S Series)', 'Synology - High availability. Flash storage', 'TP Link - VIGI products/solution'
-          ];
+            'GroupGear - Full range of AV cable kits & the brackets to go with them', 'Kyocera', 'Lindy - Attachments and new products', 'Microsoft Surface', 'Philips', 'PSA Parts', 'Ricoh', 'Samsung Display', 'Trust', 
+          'Viewsonic - The new VG2748A-2K which has some really cool features' 'Westcoast Cloud - Microsoft NCE licensing & Microsoft security' ];
 
           const salesTeam = [
             'Adam Iqbal', 'Arran Bal', 'Clare Douglas', 'David Holland', 'David Matthews',
-            'David Walshe', 'Elliott Yates', 'Hasan Haideri', 'Jason Curtis', 'Jat Tumber',
+            'David Walshe', 'Dilip Gorania', 'Elliott Yates', 'Hasan Haideri', 'Jason Curtis', 'Jat Tumber',
             'Jenny Hodson', 'Jonathan Ashfall', 'Jon Garvey', 'Karen Burton', 'Keane Richards',
             'Klaudia Borun', 'Madison Moss-Williams', 'Mat Pyle', 'Michael Addinell', 'Michael Doherty',
             'Mike Leigh', 'Nourelhuda El Magbari', 'Paul Rennals', 'Paul Roman', 'Paul Sellers', 'Ray Parmar',
