--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 
         function VendorSelectionForm() {
           const vendors = [
-           'GroupGear - Full range of AV cable kits & the brackets to go with them', 'Kyocera', 'Lindy - Attachments and new products', 'Microsoft Surface', 'Philips', 'PSA Parts', 'Ricoh - Ricoh & the NHS: Modernising Legacy Scanners Beyond Windows 10', 'Samsung Display', 'Trust', 'Viewsonic - The new VG2748A-2K which has some really cool features', 'Westcoast Cloud - Microsoft NCE licensing & Microsoft security' ];
+           'GroupGear - Full range of AV cable kits & the brackets to go with them', 'Kyocera', 'Lindy - Attachments and new products', 'Microsoft Surface', 'Philips', 'PSA Parts', 'Ricoh - Ricoh & the NHS: Modernising Legacy Scanners Beyond Windows 10', 
+              'Samsung Display', 'Trust', 'Viewsonic - The new VG2748A-2K which has some really cool features', 'Westcoast Cloud - Microsoft NCE licensing & Microsoft security' 
+          ];
 
           const salesTeam = [
             'Adam Iqbal', 'Arran Bal', 'Clare Douglas', 'David Holland', 'David Matthews',
