--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         function VendorSelectionForm() {
           const vendors = [
            'GroupGear - Full range of AV cable kits and the brackets to go with them', 'Kyocera', 'Lindy - Attachments and new products', 'Microsoft Surface', 'Philips', 'PSA Parts', 'Ricoh - Ricoh and the NHS: Modernising Legacy Scanners Beyond Windows 10', 
-              'Samsung Display', 'Trust', 'Viewsonic - The new VG2748A-2K which has some really cool features', 'Westcoast Cloud - Microsoft NCE licensing & Microsoft security' 
+              'Samsung Display - Interactive screens', 'Trust', 'Viewsonic - The new VG2748A-2K which has some really cool features', 'Westcoast Cloud - Microsoft NCE licensing & Microsoft security' 
           ];
 
           const salesTeam = [
