--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vendor Selection Form</title>
+    <title>Vendor Selection Form 9 December</title>
     <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
@@ -21,8 +21,8 @@
 
         function VendorSelectionForm() {
           const vendors = [
-           'GroupGear - Full range of AV cable kits and the brackets to go with them', 'Kyocera', 'Lindy - Attachments and new products', 'Microsoft Surface - Copilot+ PCs & AI', 'Philips - New Range – what does it offer', 'PSA Parts', 'Ricoh - Ricoh and the NHS: Modernising Legacy Scanners Beyond Windows 10', 
-              'Samsung Display - Interactive screens', 'Trust', 'Viewsonic - The new VG2748A-2K which has some really cool features', 'Westcoast Cloud - Microsoft NCE licensing & Microsoft security' 
+           'APC - Back to the Basics', 'GroupGear - Full range of AV cable kits and the brackets to go with them', 'Kyocera - Better Questions, Better Print: Supporting the NHS and Beyond.', 'Lindy - Attachments and new products', 'Microsoft Surface - Copilot+ PCs & AI', 'Philips - New Range – what does it offer', 'PSA Parts', 'Ricoh - Ricoh and the NHS: Modernising Legacy Scanners Beyond Windows 10', 
+              'Samsung Display - Interactive screens', 'Trust - New Education strategy and budget burn season', 'Westcoast Cloud - Microsoft NCE licensing & Microsoft security' 
           ];
 
           const salesTeam = [
