--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         function VendorSelectionForm() {
           const vendors = [
-           'APC - Back to the Basics', 'GroupGear - Full range of AV cable kits and the brackets to go with them', 'Kyocera - Better Questions, Better Print: Supporting the NHS and Beyond.', 'Lindy - Attachments and new products', 'Microsoft Surface - Copilot+ PCs & AI', 'Philips - New Range – what does it offer', 'PSA Parts', 'Ricoh - Ricoh and the NHS: Modernising Legacy Scanners Beyond Windows 10', 
+           'APC - Back to the Basics', 'GroupGear - Full range of AV cable kits and the brackets to go with them', 'Kyocera - Better Questions, Better Print: Supporting the NHS and Beyond.', 'Lindy - Attachments and new products', 'Microsoft Surface - Copilot+ PCs & AI', 'Philips - New Range – what does it offer', 'PSA Parts - Prolonging the life of devices', 'Ricoh - Ricoh and the NHS: Modernising Legacy Scanners Beyond Windows 10', 
               'Samsung Display - Interactive screens', 'Trust - New Education strategy and budget burn season', 'Westcoast Cloud - Microsoft NCE licensing & Microsoft security' 
           ];
 
