--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
 
         function VendorSelectionForm() {
           const vendors = [
-           'APC - Back to the Basics', 'GroupGear - Full range of AV cable kits and the brackets to go with them', 'Kyocera - Better Questions, Better Print: Supporting the NHS and Beyond.', 'Lindy - Attachments and new products', 'Microsoft Surface - Copilot+ PCs & AI', 'Philips - New Range – what does it offer', 'PSA Parts - Prolonging the life of devices', 'Ricoh - Ricoh and the NHS: Modernising Legacy Scanners Beyond Windows 10', 
-              'Samsung Display - Interactive screens', 'Trust - New Education strategy and budget burn season', 'Westcoast Cloud - Microsoft NCE licensing & Microsoft security' 
+           'APC - How to turn APC software monitoring platform into revenue', 'Avast - Avast Your Data! And Back It Up Before It Walks the Plank', 'Fellowes - ', 'Microsoft Surface - Copilot+ PCs & AI', 'Philips - New Range for 2026', 'Philips - New Range – what does it offer', 'Samsung - Samsung Tab S11 and A11', 'Synology - Backup solutions', 
+              'Techair - Helping customers hit sustainability goals with Eco line', 'TP Link - Omada Overview', 'Trust - Public sector end-of-year spend: how TRUST can help', 'Wacom - Wacom in the Healthcare Sector'
           ];
 
           const salesTeam = [
-            'Adam Iqbal', 'Arran Bal', 'Clare Douglas', 'David Holland', 'David Matthews',
+            'Arran Bal', 'Clare Douglas', 'David Holland',
             'David Walshe', 'Dilip Gorania', 'Elliott Yates', 'Hasan Haideri', 'Jason Curtis', 'Jat Tumber',
             'Jenny Hodson', 'Jonathan Ashfall', 'Jon Garvey', 'Karen Burton', 'Keane Richards',
             'Klaudia Borun', 'Madison Moss-Williams', 'Mat Pyle', 'Michael Addinell', 'Michael Doherty',
-            'Mike Leigh', 'Nourelhuda El Magbari', 'Paul Rennals', 'Paul Roman', 'Paul Sellers', 'Ray Parmar',
+            'Nourelhuda El Magbari', 'Paul Rennals', 'Paul Sellers', 'Ray Parmar',
             'Rourke Smal', 'Scott Hancock', 'Sarah Lyons', 'Tom Bestwick', 'Zahid Hussain'
           ];
 
