--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         function VendorSelectionForm() {
           const vendors = [
-           'APC - How to turn APC software monitoring platform into revenue', 'Avast - Avast Your Data! And Back It Up Before It Walks the Plank', 'Fellowes - The benefit of Ergonomic Accessories and DSE assessment / requirement focus', 'Microsoft Surface - Copilot+ PCs & AI', 'Philips - New Range for 2026', 'Philips - New Range – what does it offer', 'Samsung - Samsung Tab S11 and A11', 'Synology - Backup solutions', 
+           'APC - How to turn APC software monitoring platform into revenue', 'Avast - Avast Your Data! And Back It Up Before It Walks the Plank', 'Fellowes - The benefit of Ergonomic Accessories and DSE assessment / requirement focus', 'Microsoft Surface - Copilot+ PCs & AI', 'Philips - New Range for 2026', 'Samsung - Samsung Tab S11 and A11', 'Synology - Backup solutions', 
               'Techair - Helping customers hit sustainability goals with Eco line', 'TP Link - Omada Overview', 'Trust - Public sector end-of-year spend: how TRUST can help', 'Wacom - Wacom in the Healthcare Sector'
           ];
 
