--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             'Jenny Hodson', 'Jonathan Ashfall', 'Jon Garvey', 'Karen Burton', 'Keane Richards',
             'Klaudia Borun', 'Madison Moss-Williams', 'Mat Pyle', 'Michael Addinell', 'Michael Doherty',
             'Nourelhuda El Magbari', 'Paul Rennals', 'Paul Sellers', 'Ray Parmar',
-            'Rourke Smal', 'Scott Hancock', 'Sarah Lyons', 'Tom Bestwick', 'Zahid Hussain'
+            'Rourke Smal', 'Scott Hancock', 'Sarah Lyons', 'Zahid Hussain'
           ];
 
           const [selectedName, setSelectedName] = useState('');
