--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 
           const salesTeam = [
             'Arran Bal', 'Clare Douglas', 'David Holland',
-            'David Walshe', 'Dilip Gorania', 'Elliott Yates', 'Hasan Haideri', 'Jason Curtis', 'Jat Tumber',
+            'David Walshe', 'Dilip Gorania', 'Elisabeth Burjaw', 'Hasan Haideri', 'Jason Curtis', 'Jat Tumber',
             'Jenny Hodson', 'Jonathan Ashfall', 'Jon Garvey', 'Karen Burton', 'Keane Richards',
             'Klaudia Borun', 'Madison Moss-Williams', 'Mat Pyle', 'Michael Addinell', 'Michael Doherty',
             'Nourelhuda El Magbari', 'Paul Rennals', 'Paul Sellers', 'Ray Parmar',
-            'Rourke Smal', 'Scott Hancock', 'Sarah Lyons', 'Zahid Hussain'
+            'Rourke Smal', 'Scott Hancock', 'Sarah Lyons', 'Safyaan Lodhi', 'Zahid Hussain'
           ];
 
           const [selectedName, setSelectedName] = useState('');
