--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
         function VendorSelectionForm() {
           const vendors = [
-           'APC - How to turn APC software monitoring platform into revenue', 'Avast - Avast Your Data! And Back It Up Before It Walks the Plank', 'Fellowes - The benefit of Ergonomic Accessories and DSE assessment / requirement focus', 'Microsoft Surface - Copilot+ PCs & AI', 'Philips - New Range for 2026', 'Samsung - Samsung Tab S11 and A11', 'Synology - Backup solutions', 
-              'Techair - Helping customers hit sustainability goals with Eco line', 'TP Link - Omada Overview', 'Trust - Public sector end-of-year spend: how TRUST can help', 'Wacom - Wacom in the Healthcare Sector'
+           'Brother', 'GroupGear', 'HP', 'iStorage', 'Lenovo', 'Lindy', 'Origin', 
+              'Samsung Compute', 'Sonicwall', 'T1A', 'Viewsonic', 'Westcoast Cloud'
           ];
 
           const salesTeam = [
