--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         function VendorSelectionForm() {
           const vendors = [
-           'Brother - Managed Print and promotions', 'GroupGear - New keyboard/mouse combi set', 'HP - Workstations with specific focus on AMD workstations', 'iStorage - Secure Your Data with Confidence Today: iStorage | Kanguru', 'Lenovo ', 'Lindy - Meeting room and AV products', 'Origin - Maxcases - tablet/phone and rugged laptop cases.', 
+           'Brother - Managed Print and promotions', 'GroupGear - New keyboard/mouse combi set', 'HP - Workstations with specific focus on AMD workstations', 'iStorage - Secure Your Data with Confidence Today: iStorage | Kanguru', 'Lenovo - Pocket to Cloud', 'Lindy - Meeting room and AV products', 'Origin - Maxcases - tablet/phone and rugged laptop cases.', 
               'Samsung Compute - Galaxy Book 6', 'Sonicwall - Gen 8 firewalls and the remote access solution: CSE.', 'T1A - Marked shortage and price increases', 'Viewsonic - The new VG2748A-2K ', 'Westcoast Cloud - The new Copilot for Business licences'
           ];
 
