--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           ];
 
           const salesTeam = [
-            'Arran Bal', 'Clare Douglas', 'David Walshe', 'Dilip Gorania', 'Elisabeth Burjaw', 'Hasan Haideri', 'Jason Curtis', 'Jenny Hodson', 'Jonathan Ashfall', 'Jon Garvey', 'Keane Richards', 'Klaudia Borun', 'Madison Moss-Williams', 'Mat Pyle',  'Michael Doherty', 'Nourelhuda El Magbari', 'Paul Rennals', 'Rourke Smal', 'Safyaan Lodhi', 'Zahid Hussain'
+            'Arran Bal', 'Clare Douglas', 'David Walshe', 'Dilip Gorania', 'Elisabeth Burjaw', 'Hasan Haideri', 'Irshad Khan', 'Jason Curtis', 'Jenny Hodson', 'Jonathan Ashfall', 'Jon Garvey', 'Keane Richards', 'Klaudia Borun', 'Madison Moss-Williams', 'Mat Pyle',  'Michael Doherty', 'Nourelhuda El Magbari', 'Paul Rennals', 'Rourke Smal', 'Safyaan Lodhi', 'Zahid Hussain'
           ];
 
           const [selectedName, setSelectedName] = useState('');
