--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 
         function VendorSelectionForm() {
           const vendors = [
-           'Dicota - Come and meet us!', 'EPOS - New peomotions', 'i3Connect - New Display - Aspen4', 'Kyocera - Cashbacks offers, and the PA4000x bundle for the NHS', 'Logitech - Deal Reg process', 'Neomounts - The Perfect Ergonomic Workplace: Back to the Office', 'PSA Parts -  Sweating your assets', 'Ricoh - NHS – Budget Burn Season Is On 🔥
-              Making Tax Digital: The Countdown Has Begun ⏳', 'T1A - Marked shortage and price increases', 'TCL - NEW TCL products launched'
+           'Dicota - Come and meet us!', 'EPOS - New peomotions', 'i3Connect - New Display - Aspen4', 'Kyocera - Cashbacks offers, and the PA4000x bundle for the NHS', 'Logitech - Deal Reg process', 'Neomounts - The Perfect Ergonomic Workplace: Back to the Office', 'PSA Parts -  Sweating your assets', 'Ricoh - NHS – Budget Burn Season Is On Fire & Making Tax Digital: The Countdown Has Begun', 'T1A - Marked shortage and price increases', 'TCL - NEW TCL products launched'
           ];
 
           const salesTeam = [
