--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vendor Selection Form 10 February</title>
+    <title>Vendor Selection Form 10 March</title>
     <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
@@ -21,7 +21,7 @@
 
         function VendorSelectionForm() {
           const vendors = [
-           '<b>Dicota</b> - Come and meet us!', 'EPOS - New promotions', 'i3Connect - New Product Launched Aspen4', 'Kyocera - Cashbacks offers, and the PA4000x bundle for the NHS', 'Logitech - Deal Reg process', 'Neomounts - The Perfect Ergonomic Workplace: Back to the Office', 'PSA Parts -  Sweating your assets', 'Ricoh - NHS – Budget Burn Season Is On Fire & Making Tax Digital: The Countdown Has Begun', 'T1A - Marked shortage and price increases', 'TCL - New TCL products launched'
+           'Dicota - Come and meet us!', 'EPOS - New promotions', 'i3Connect - New Product Launched Aspen4', 'Kyocera - Cashbacks offers, and the PA4000x bundle for the NHS', 'Logitech - Deal Reg process', 'Neomounts - The Perfect Ergonomic Workplace: Back to the Office', 'PSA Parts -  Sweating your assets', 'Ricoh - NHS – Budget Burn Season Is On Fire & Making Tax Digital: The Countdown Has Begun', 'T1A - Marked shortage and price increases', 'TCL - New TCL products launched'
           ];
 
           const salesTeam = [
