--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Vendor Selection form</title>
     <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
@@ -111,7 +110,7 @@
             <div className="min-h-screen bg-gradient-to-br from-blue-50 to-indigo-100 p-6">
               <div className="max-w-4xl mx-auto">
                 <div className="bg-white rounded-xl shadow-lg p-8">
-                  <h1 className="text-3xl font-bold text-gray-800 mb-2">Vendor Selection Form</h1>
+                  <h1 className="text-3xl font-bold text-gray-800 mb-2">Vendor Selection Form 10 March</h1>
                   <p className="text-gray-600 mb-6">Select at least 5 vendors you'd like to meet (you can select more)</p>
                   
                   {showError && (
